# spaced

./: .gitignore  README.md  pyproject.toml  test.py
core/src/: import_from_obsidian.py  sm2_algorithm.py
docs/: basic.md
latex_test/: db.py  full.tex  latex.py  test_pylatex.py
spaced/: README.md  db.sqlite3  manage.py  test.py
spaced/spaced/: asgi.py  settings.py  urls.py  wsgi.py
spaced/spaced_app/: admin.py  apps.py  import_from_obsidian.py  models.py  urls.py  views.py
spaced/spaced_app/migrations/: 0001_initial.py  0002_atom_type.py  0002_cardstate.py
spaced/spaced_app/static/: card_styling.css
spaced/spaced_app/templates/: add_card.html  base.html  home.html  review_cards.html
spaced_vault/: anova theorem.md  argmin.md  best linear predictor theorem.md  conditional expectation decomposition property.md  conditional expectation function prediction property.md  conditional expectation function.md  covariate.md  dependent variable.md  design matrix.md  expectation.md  given.md  ifthen.md  intercept.md  law of iterated expectations.md  linear conditional expectation theorem.md  linear.md  mean.md  minimum mean squared error estimator.md  regression conditional expectation theorem.md  regression error term.md  regression function.md  regression residual.md  square.md  uncorrelated.md  variance.md
spaced_vault/.obsidian/: graph.json  workspace.json
